# sudoku

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  index.js  package.json  webpack.config.js
.github/workflows/: pages-webpack.yml
src/: lib.rs  smallindex.rs
